--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,11 @@
 PORT: 9612 
-LIMIT: 2
-PER: "1h"
-OAIKEY: ""
+OAIKEY: "" # OpenAI API key 用于内容审核
 MODERATION: "https://api.openai.com/v1/moderations"
+AUTO: "200/3h"
+TEXT-DAVINCI-002-RENDER-SHA: "200/3h"
+GPT-4O-MINI: "200/3h"
+GPT-4O: "60/3h"
+GPT-4: "20/3h"
+GPT-4O-CANMORE: "30/3h"
+O1-PREVIEW: "7/24h"
+O1-MINI: "50/24h"
